# pocketdm

./: .gitignore  PRD.md  README.md  app.py  pyproject.toml  requirements.txt  run_local.sh
.github/workflows/: ci.yml
.superplan/: decisions.md
.superplan/changes/pocketdm/: tasks.md
.superplan/changes/pocketdm/specs/: README.md
.superplan/changes/pocketdm/tasks/: T-0001.md  T-0002.md  T-0003.md  T-0004.md  T-0005.md  T-0006.md  T-0007.md  T-0008.md  T-0009.md  T-0010.md  T-0011.md  T-0012.md  T-0013.md  T-0014.md  T-0015.md  T-0016.md
.superplan/runtime/: events.ndjson  overlay-control.json  overlay.json  session.json  tasks.json
app/: __init__.py  llama_backend.py  server.py  tts.py
app/static/: app.js  index.html  styles.css
app/voices/: __init__.py  build_lore_voice.py  lore_narrator.npy  lore_narrator.pt
data/: build_dataset.py  filter_run.py  filters.py  teacher_gen.py
data/clean/: holdout_seeds.jsonl
data/clean-smoke-v6/: REPORT.md
data/clean-smoke10-50/: REPORT.md
data/clean-smoke7-50/: REPORT.md
data/clean-smoke8/: REPORT.md
data/clean-smoke9/: REPORT.md  adventures.jsonl
docs/: competitive-inspiration-scan.md  demo-shotlist.md  field-notes-draft.md  mtp-runtime-runbook.md  pet-sprite-sheet-requests.md  submission-copy.md
engine/: __init__.py  bridges.py  generate.py  grammar.gbnf  pressure.py  prompt.py  repl.py  schema.py  state.py
eval/: __init__.py  harness.py  judge.py  metrics.py  report.py  sessions.py
eval/results/: gemma-4-e2b-smoke2.json  grammar-sessions-2-fail.json  grammar-sessions-smoke.json
macos/PocketDMCompanion/: Info.plist  Package.swift  README.md
macos/PocketDMCompanion/Sources/PocketDMCompanion/: LanguageCoach.swift  PetLoopModels.swift  main.swift
macos/PocketDMCompanion/Sources/PocketDMCompanion/Resources/: language-packs.json
macos/PocketDMCompanion/scripts/: build_language_packs.py  launch_app.sh  package_app.sh  rebuild_pet_sprites.py
scripts/: bench_llama_mtp.py  prove_offline_api.py
specs/: PLAN.md  SCHEMA-FROZEN.md  WP-1-schema.md  WP-2-engine.md  WP-3-teacher.md  WP-V-voice.md
tasks/: costs.md  hackathon-submission-plan.md  lessons.md  offline-api-proof.md  submission-readiness.md
tests/: test_bench_llama_mtp.py  test_build_dataset.py  test_engine.py  test_eval.py  test_filters.py  test_llama_backend.py  test_offline.py  test_schema.py  test_server.py  test_teacher_gen.py  test_training.py  test_voice.py
train/: __init__.py  data.py  export_gguf.py  finetune.py  smoke_infer.py
