[project]
name = "pocketdm"
version = "0.1.0"
description = "PocketDM offline adventure engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
]

[project.scripts]
pocketdm-repl = "engine.repl:main"

[dependency-groups]
dev = [
    "pytest>=8",
]
repl = [
    "openai>=1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "tests",
]
