[project]
name = "pocketdm"
version = "0.1.0"
description = "PocketDM offline adventure engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
]

[project.scripts]
pocketdm-repl = "engine.repl:main"

[dependency-groups]
data = [
    "better-profanity>=0.7.0",
    "sentence-transformers>=3.4.0",
]
dev = [
    "pytest>=8",
]
repl = [
    "openai>=1",
]
tts = [
    "kokoro-onnx",
    "numpy",
    "pedalboard",
    "soundfile",
]
voicebuild = [
    "huggingface-hub",
    "numpy",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["engine", "app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "tests",
]
markers = [
    "slow: requires local model artifacts or heavier runtime dependencies",
]
